--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "name": "modmanager",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
-  "main": "main.js",
+  "main": "public/electron.js",
+  "homepage": "./",
+  "description": "Mod Manager",
+  "author": {
+    "name": "Guilherme Schuch",
+    "email": "guiguischuch@gmail.com"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,14 +25,33 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "make": "electron-forge make",
     "eject": "react-scripts eject",
-    "electron": "nodemon --exec electron . --disable-http-cache"
+    "electron": "nodemon --exec electron . --disable-http-cache",
+    "electron:build": "react-scripts build && electron-builder -w -c.extraMetadata.main=build/electron.js"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "build": {
+    "appId": "com.jadamodmanager",
+    "productName": "Jada Mod Manager",
+    "files": [
+      "build/**/*",
+      "node_modules/**/*"
+    ],
+    "extraResources": [
+      {
+        "from": "./public/assets",
+        "to": "assets"
+      }
+    ],
+    "directories": {
+      "buildResources": "public"
+    }
   },
   "browserslist": {
     "production": [
@@ -42,6 +67,7 @@
   },
   "devDependencies": {
     "electron": "^33.0.0",
+    "electron-builder": "^25.1.8",
     "nodemon": "^3.1.7"
   }
 }
