--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "fs-extra": "^11.2.0",
+    "install": "^0.13.0",
+    "npm": "^11.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "sweetalert2": "^11.15.10",
     "uuid": "^10.0.0",
     "web-vitals": "^2.1.4"
   },
